--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ compileTestJava {
 }
 
 repositories {
+    mavenLocal()
     maven {
         url "https://repo.mediathekview.de/repository/maven-public/"
     }
